--- a/paginas/index.html
+++ b/paginas/index.html
@@ -26,31 +26,31 @@
             <!-- Destaques -->
             <div class="destaques">
                 <div class="personagens-img">
-                <img src="../Imagens/personagens.png">
-                    <div class="personagens-txt">
-                    <h4>Personagens</h4>
-                    </div>
+                    <img src="../Imagens/personagens.png">
+                        <div class="personagens-txt">
+                            <h4>Personagens</h4>
+                        </div>
                 </div>
                 <div class="episodios-img">
-                <img src="../Imagens/episodios.png">
-                    <div class="episodios-txt">
-                    <h4>Episódios</h4>
-                    </div>  
+                    <img src="../Imagens/episodios.png">
+                        <div class="episodios-txt">
+                            <h4>Episódios</h4>
+                        </div>  
                 </div>
                 <div class="citacoes-img">
-                <img src="../Imagens/citacoes.png">
-                    <div class="citacoes-txt">
-                    <h4>Citações</h4>
-                    </div> 
+                    <img src="../Imagens/citacoes.png">
+                        <div class="citacoes-txt">
+                            <h4>Citações</h4>
+                        </div> 
                 </div>
                 <div class="criaturas-img">
-                <img src="../Imagens/criaturas.png">
-                    <div class="criaturas-txt">
-                    <h4>criaturas</h4>
-                    </div> 
+                    <img src="../Imagens/criaturas.png">
+                        <div class="criaturas-txt">
+                            <h4>Criaturas</h4>
+                        </div> 
                 </div>
                 <div class="vertudo">
-                    <button>ver tudo</button>
+                    <button>Ver tudo</button>
                 </div>
             </div>
 
@@ -68,8 +68,4 @@
             </div>
         </main>
     </body>
-    
-    <footer>
-
-    </footer>
 </html>
