--- a/paginas/index.html
+++ b/paginas/index.html
@@ -25,25 +25,25 @@
 
             <!-- Destaques -->
             <div class="destaques">
-                <div class="personagens-img">
+                <div class="personagens">
                     <img src="../Imagens/personagens.png">
                         <div class="personagens-txt">
                             <h4>Personagens</h4>
                         </div>
                 </div>
-                <div class="episodios-img">
+                <div class="episodios">
                     <img src="../Imagens/episodios.png">
                         <div class="episodios-txt">
                             <h4>Episódios</h4>
                         </div>  
                 </div>
-                <div class="citacoes-img">
+                <div class="citacoes">
                     <img src="../Imagens/citacoes.png">
                         <div class="citacoes-txt">
                             <h4>Citações</h4>
                         </div> 
                 </div>
-                <div class="criaturas-img">
+                <div class="criaturas">
                     <img src="../Imagens/criaturas.png">
                         <div class="criaturas-txt">
                             <h4>Criaturas</h4>
