realinhando as imagens

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projeto Coderhouse Rick e Morty</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="../styles/styles.css">
+        <title>Projeto Coderhouse Rick e Morty</title>
     </head>
 
     <body>
@@ -56,7 +56,7 @@
 
             <!-- Portal -->
             <div class="portal">
-                <img class="portal" src="../Imagens/portal.gif">
+                <img src="../Imagens/portal.gif">
                     <button class="jogar">JOGAR</button>
             </div>
 
@@ -67,5 +67,6 @@
                     </p>
             </div>
         </main>
+        
     </body>
 </html>
