--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -15,12 +15,7 @@
                 <button>começar quiz</button>
             </div>
             <div class="perfil small">
-                <img src="../imagens/128x128 2.png" style="
-                    height: 77px;
-                    width: 76px;
-                    border-radius: 170px;
-                    stroke: #4BB257;
-                    stroke-width: 3px;">
+                <img src="../imagens/128x128 2.png">
             </div>
         </header>
 
