acrescentado boostrap na pagina perfil

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name=""content="">
-        <title>Projeto Coderhouse Rick e Morty</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="../styles/perfil-style.css">
+        <title>Projeto Coderhouse Rick e Morty</title>
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="..\Imagens\Rick-And-Morty-Logo.png">
+                <img src="../Imagens/logo.png">
             </div>
             <div class="start">
-                <button>começar quiz</button>
+                <button>Começar quiz</button>
             </div>
             <div class="perfil small">
-                <img src="../imagens/128x128 2.png">
-            </div>
+                <img src="">
         </header>
 
         <!-- Container -->
@@ -25,10 +25,10 @@
             <!-- menu -->
             <div class="menu">
                 <div class="botoes">
-                    <button>principal</button>
+                    <button>Principal</button>
                 </div>
                 <div class="botoes">
-                    <button>quiz</button>
+                    <button>Quiz</button>
                 </div>
                 <div class="botoes">
                     <button>FAQ</button>
@@ -38,9 +38,13 @@
             <!-- perfil -->
             <div class="perfil">
                 <div class="progress">
-                    <img src="../Imagens/128x128 1.png">
+                    <img src="../Imagens/cidadela.png">
                     <h2>Nome</h2>
                     <p>Nível 5</p>
+                </div>
+
+                <div class="progress-exp">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
 
                 <div class="conquistas">
@@ -55,41 +59,44 @@
                         <img src="../imagens/Badge2.png">
                     </div>
                     <div class="vertudo">
-                        <button>ver tudo</button>
+                        <button>Ver tudo</button>
                     </div>
                 </div>
 
                 <div class="destaques">
                     <h3>Categorias em destaque</h3>
                     <div class="personagens-img">
-                    <img src="../imagens/download.jpg">
+                    <img src="../Imagens/personagens.png">
                         <div class="personagens-txt">
                         <h4>Personagens</h4>
                         </div>
                     </div>
                     <div class="episodios-img">
-                        <img src="../imagens/images.jpg">
+                        <img src="../Imagens/episodios.png">
                         <div class="episodios-txt">
                         <h4>Episódios</h4>
                         </div>  
                     </div>
                     <div class="citacoes-img">
-                        <img src="../imagens/claypeople.PNG">
+                        <img src="../Imagens/citacoes.png">
                         <div class="citacoes-txt">
                         <h4>Citações</h4>
                         </div> 
                     </div>
                     <div class="criaturas-img">
-                        <img src="../imagens/9a2e4356892043.59c0b3697ee33.jpg">
+                        <img src="../Imagens/criaturas.png">
                         <div class="criaturas-txt">
-                        <h4>criaturas</h4>
+                        <h4>Criaturas</h4>
                         </div> 
                     </div>
                     <div class="vertudo">
-                        <button>ver tudo</button>
+                        <button>Ver tudo</button>
                     </div>
                 </div>
             </div>
-        </div>       
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>     
     </body>
 </html>
