--- a/paginas/index.html
+++ b/paginas/index.html
@@ -16,7 +16,7 @@
                 <img src="../Imagens/logo.png">
             </div>
             <div class="login">
-                <button>LOGIN</button>
+                <a href="../paginas/perfil.html"><button>LOGIN</button></a>
             </div>
         </header>
 
