--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -41,11 +41,11 @@
                     <img src="../Imagens/cidadela.png">
                     <h2>Nome</h2>
                     <p>Nível 5</p>
+                    <div class="progress-exp">
+                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
 
-                <div class="progress-exp">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
 
                 <div class="conquistas">
                     <h3>Conquistas</h3>
