conectando com os topicos

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -57,7 +57,7 @@
             <!-- Portal -->
             <div class="portal">
                 <img src="../Imagens/portal.gif">
-                    <button class="jogar">JOGAR</button>
+                    <a href ="../paginas/topicos.html"><button class="jogar">JOGAR</button></a>
             </div>
 
             <!-- Avisos -->
