colocando boostrap no perfil

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -37,15 +37,15 @@
 
             <!-- perfil -->
             <div class="perfil">
-                <div class="progress">
+                <div class="dados-perfil">
                     <img src="../Imagens/cidadela.png">
-                    <h2>Nome</h2>
-                    <p>Nível 5</p>
-                    <div class="progress-exp">
+                    <div class="progress">
+                        <h2>Nome</h2>
+                        <p>Nível 5</p>
                         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                </div>
 
+                </div>
 
                 <div class="conquistas">
                     <h3>Conquistas</h3>
