conexão com a pagina topicos

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -13,7 +13,7 @@
                 <img src="../Imagens/logo.png">
             </div>
             <div class="start">
-                <button>Começar quiz</button>
+                <a href="../paginas/topicos.html"><button>Começar quiz</button></a>
             </div>
             <div class="perfil small">
                 <img src="">
@@ -42,7 +42,7 @@
                     <div class="progress">
                         <h2>Nome</h2>
                         <p>Nível 5</p>
-                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                 </div>
