conexão das paginas

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -28,7 +28,7 @@
                     <button>Principal</button>
                 </div>
                 <div class="botoes">
-                    <button>Quiz</button>
+                    <a href="../paginas/topicos.html"><button>Quiz</button></a>
                 </div>
                 <div class="botoes">
                     <button>FAQ</button>
