--- a/paginas/topicos.html
+++ b/paginas/topicos.html
@@ -87,7 +87,7 @@
 
             <!-- menu -->
             <nav class="menu">
-                <button>Principal</button>
+                <a href ="../paginas/perfil.html"><button>Principal</button></a>
                 <button>Quiz</button>
                 <button>Faq</button>
                 <button>Sair</button>
