alterado a conexão do botao login

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -16,7 +16,7 @@
                 <img src="../Imagens/logo.png">
             </div>
             <div class="login">
-                <a href="../paginas/perfil.html"><button>LOGIN</button></a>
+                <a href="../paginas/cadastro.html"><button>LOGIN</button></a>
             </div>
         </header>
 
@@ -57,7 +57,7 @@
             <!-- Portal -->
             <div class="portal">
                 <img src="../Imagens/portal.gif">
-                    <a href ="../paginas/topicos.html"><button class="jogar">JOGAR</button></a>
+                    <button class="jogar">JOGAR</button></a>
             </div>
 
             <!-- Avisos -->
