inicio de CSS da página Tópicos

--- a/paginas/topicos.html
+++ b/paginas/topicos.html
@@ -3,8 +3,9 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="/styles/styles.css">
+        <link rel="stylesheet" href="../styles/topicos-syles.css">
     </head>
+
     <body>
         <!-- Header -->
         <header>
@@ -18,6 +19,14 @@
             <img src="">
             </div>
         </header>
+
+        <!-- menu -->
+        <nav class="menu">
+            <button>Principal</button>
+            <button>Quiz</button>
+            <button>Faq</button>
+            <button>Sair</button>
+            </nav>
         
         <!-- Container -->        
         <main class="container">
@@ -84,14 +93,6 @@
                     <button>Mais</button>
                 </div>
             </div>
-
-            <!-- menu -->
-            <nav class="menu">
-                <a href ="../paginas/perfil.html"><button>Principal</button></a>
-                <button>Quiz</button>
-                <button>Faq</button>
-                <button>Sair</button>
-            </nav>
         </main>
     </body>
 </html>
