Atualização Página Tópicos

--- a/paginas/topicos.html
+++ b/paginas/topicos.html
@@ -19,78 +19,80 @@
             <img src="">
             </div>
         </header>
-
-        <!-- menu -->
-        <nav class="menu">
-            <button>Principal</button>
-            <button>Quiz</button>
-            <button>Faq</button>
-            <button>Sair</button>
-            </nav>
         
         <!-- Container -->        
-        <main class="container">
+        <main class="main">
 
-            <!-- Opcoes -->
+            <!-- menu -->
+            <nav class="menu">
+                <button>Principal</button>
+                <button>Quiz</button>
+                <button>Faq</button>
+                <button>Sair</button>
+            </nav>
+
+            <!-- Tópicos -->
             <div class="topicos">
-                <h2>Selecionar tópico</h2>
-                <p>Categorias em destaque</p>
-                <div class="personagens-img">
-                    <img src="../Imagens/personagens.png">
-                    <div class="personagens-txt">
-                        <h4>Personagens</h4>
-                    </div>              
+                <div class="texto">
+                    <h2>Selecionar tópico</h2>
+                    <p>Categorias em destaque</p>
                 </div>
-                <div class="episodios-img">
-                    <img src="../Imagens/episodios.png">
-                    <div class="episodios-txt">
-                        <h4>Episódios</h4>
-                    </div>  
-                </div>
-                <div class="citacoes-img">
-                    <img src="../Imagens/citacoes.png">
-                    <div class="citacoes-txt">
-                        <h4>Citações</h4>
-                    </div>  
-                </div>
-                <div class="criaturas-img">
-                    <img src="../Imagens/criaturas.png">
-                    <div class="criaturas-txt">
-                        <h4>Criaturas</h4>
-                    </div>  
-                </div>
-                <div class="aparicoes-img">
-                    <img src="../Imagens/aparicoes.png">
-                    <div class="aparicoes-txt">
-                        <h4>Aparições</h4>
-                    </div>  
-                </div>
-                <div class="referencias-img">
-                    <img src="../Imagens/referencias.png">
-                    <div class="referencias-txt">
-                        <h4>Referências</h4>
-                    </div>  
-                </div>
-                <div class="bugigangas-img">
-                    <img src="../Imagens/bugigangas.png">
-                    <div class="bugigangas-txt">
-                        <h4>Bugigangas</h4>
-                    </div>  
-                </div>
-                <div class="cidadela-img">
-                    <img src="../Imagens/cidadela.png">
-                    <div class="cidadela-txt">
-                        <h4>Cidadela</h4>
-                    </div>  
-                </div>
-                <div class="viloes-img">
-                    <img src="../Imagens/viloes.png">
-                    <div class="viloes-txt">
-                        <h4>Vilões</h4>
-                    </div>  
-                </div>
-                <div class="mais">
-                    <button>Mais</button>
+                    <div class="personagens-img">
+                        <img src="../Imagens/personagens.png">
+                        <div class="personagens-txt">
+                            <h4>Personagens</h4>
+                        </div>              
+                    </div>
+                    <div class="episodios-img">
+                        <img src="../Imagens/episodios.png">
+                        <div class="episodios-txt">
+                            <h4>Episódios</h4>
+                        </div>
+                    </div>
+                    <div class="citacoes-img">
+                        <img src="../Imagens/citacoes.png">
+                        <div class="citacoes-txt">
+                            <h4>Citações</h4>
+                        </div>  
+                    </div>
+                    <div class="criaturas-img">
+                        <img src="../Imagens/criaturas.png">
+                        <div class="criaturas-txt">
+                            <h4>Criaturas</h4>
+                        </div>  
+                    </div>
+                    <div class="aparicoes-img">
+                        <img src="../Imagens/aparicoes.png">
+                        <div class="aparicoes-txt">
+                            <h4>Aparições</h4>
+                        </div>  
+                    </div>
+                    <div class="referencias-img">
+                        <img src="../Imagens/referencias.png">
+                        <div class="referencias-txt">
+                            <h4>Referências</h4>
+                        </div>  
+                    </div>
+                    <div class="bugigangas-img">
+                        <img src="../Imagens/bugigangas.png">
+                        <div class="bugigangas-txt">
+                            <h4>Bugigangas</h4>
+                        </div>  
+                    </div>
+                    <div class="cidadela-img">
+                        <img src="../Imagens/cidadela.png">
+                        <div class="cidadela-txt">
+                            <h4>Cidadela</h4>
+                        </div>  
+                    </div>
+                    <div class="viloes-img">
+                        <img src="../Imagens/viloes.png">
+                        <div class="viloes-txt">
+                            <h4>Vilões</h4>
+                        </div>
+                    <div class="mais">
+                        <button>Mais</button>
+                    </div>
                 </div>
             </div>
         </main>
