criação do alerta somente

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -56,8 +56,9 @@
 
             <!-- Portal -->
             <div class="portal">
-                <img src="../Imagens/portal.gif">
+                <img src="">
                     <button class="jogar">JOGAR</button></a>
+                    <button class="jogar" onclick="mostrarAlerta()">Abrir Alerta!</button>
             </div>
 
             <!-- Avisos -->
@@ -67,6 +68,9 @@
                     </p>
             </div>
         </main>
-        
+        <script>
+            function mostrarAlerta() {
+            alert("Projeto em desenvolvimento!");}
+        </script>
     </body>
 </html>
