--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -3,13 +3,13 @@
     <head>
         <meta name=""content="">
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="../styles/styles2.CSS">
+        <link rel="stylesheet" href="../styles/perguntas-styles.CSS">
     </head>
     <body>
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="../Imagens/Rick-And-Morty-Logo.png">
+                <img src="../imagens/logo.png">
             </div>
             <div class="restart">
                 <button>reiniciar quiz</button>
