--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="../styles/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Projeto Coderhouse Rick e Morty</title>
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
 
-    <body>
+    <body style= "background-image: linear-gradient(to right, #273b3c, #439b75);">
         
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="../Imagens/logo.png">
+                <img src="./imagens/logo.png">
             </div>
             <div class="login">
-                <a href="../paginas/cadastro.html"><button>LOGIN</button></a>
+                <button type="button">LOGIN</button>
             </div>
         </header>
 
@@ -25,47 +24,51 @@
 
             <!-- Destaques -->
             <div class="destaques">
-                <div class="personagens">
-                    <img src="../Imagens/personagens.png">
-                        <div class="personagens-txt">
-                            <h4>Personagens</h4>
-                        </div>
+                <div class="personagens-img destaques-item">
+                    <img src="./imagens/personagens.png">
+                    <h4>Personagens</h4>
                 </div>
-                <div class="episodios">
-                    <img src="../Imagens/episodios.png">
-                        <div class="episodios-txt">
-                            <h4>Episódios</h4>
-                        </div>  
+
+                <div class="episodios-img destaques-item">
+                    <img src="./imagens/episodios.png">
+                    <h4>Episódios</h4>
                 </div>
-                <div class="citacoes">
-                    <img src="../Imagens/citacoes.png">
-                        <div class="citacoes-txt">
-                            <h4>Citações</h4>
-                        </div> 
+
+                <div class="citacoes-img destaques-item">
+                    <img src="./imagens/citacoes.png">
+                    <h4>Citações</h4>
                 </div>
-                <div class="criaturas">
-                    <img src="../Imagens/criaturas.png">
-                        <div class="criaturas-txt">
-                            <h4>Criaturas</h4>
-                        </div> 
+
+                <div class="criaturas-img destaques-item">
+                    <img src="./imagens/criaturas.png">
+                    <h4>criaturas</h4>
                 </div>
+
                 <div class="vertudo">
-                    <button>Ver tudo</button>
+                    <button>ver tudo</button>
                 </div>
             </div>
 
             <!-- Portal -->
             <div class="portal">
-                <img src="">
-                    <button class="jogar">JOGAR</button></a>
+                <img class="portal" src="./imagens/portal.gif">
+                <button class="jogar">JOGAR</button>
             </div>
 
             <!-- Avisos -->
-            <div class="aviso">
-                <h3>AVISO:</h3>
-                    <p>Este jogo foi criado por fãs do desenho. Nada neste site tem relação oficial com o produto Rick e Morty.
-                    </p>
+            <div style="text-align: center" class="aviso">
+                <h3>AVISO</h3>
+                <p>Este jogo foi criado de fãs para fãs do desenho.</p> 
+                <p>Nada neste site tem relação oficial com o produto Rick e Morty.</p>
             </div>
         </main>
+        <script>
+            function mostrarAlerta() {
+            alert("Projeto em desenvolvimento!");}
+        </script>
     </body>
+    
+    <footer>
+        <span><i class="fa-regular fa-copyright"></i>Rick and Morty Quiz</span>
+    </footer>
 </html>
