teste javascrip API

--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -49,11 +49,12 @@
                 <div class="box2">
                     <p>Responda as perguntas abaixo</p>
                 </div>
-                <div class="box3">
-                    <video class="pergunta1" controls>
-                        <source src="../imagens/Rick And Morty. #8 rick na casa branca..mp4">
-                    </video>
-                </div>
+                <div 
+                    id="video"
+                    class="container-fluid"
+                    width="33%"
+                    height="33%"
+                ></div>
                 <div class="box4">
                     <h3>Pergunta 1/5</h3>
                     <h3>O que o Morty queria do Presidente?</h3>
