--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -27,7 +27,12 @@
                 </div>
             </div>
             
-            <div class="perfil">
+            <div class="box-perfil">
+                <div class="perfil">
+                    <div class="nome">
+                        <h1>Nome</h1>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
