removido os comentarios de tags

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
 
-    <body style= "background-image: linear-gradient(to right, #273b3c, #439b75);">
+    <body>
         
         <!-- Header -->
         <header>
@@ -56,16 +56,12 @@
             </div>
 
             <!-- Avisos -->
-            <div style="text-align: center" class="aviso">
-                <h3>AVISO</h3>
+            <div class="aviso">
+                <h3>AVISO:</h3>
                 <p>Este jogo foi criado de fãs para fãs do desenho.</p> 
                 <p>Nada neste site tem relação oficial com o produto Rick e Morty.</p>
             </div>
         </main>
-        <script>
-            function mostrarAlerta() {
-            alert("Projeto em desenvolvimento!");}
-        </script>
     </body>
     <footer>
         <span><i class="fa-regular fa-copyright"></i>Rick and Morty Quiz</span>
