--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -33,6 +33,8 @@
                         <h1>Nome</h1>
                     </div>
                 </div>
+                <div class="conquistas">
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
