--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -33,6 +33,17 @@
                         <h1>Nome</h1>
                     </div>
                     <div class="conquistas">
+                        <div class="conquistas-name">
+                            <h3>Conquistas</h3>
+                        </div>
+                        <div class="conquistas-icones"> 
+                            <img src="../Imagens/acertou todas.png" alt="">
+                            <img src="../Imagens/login 4dias.png" alt="">
+                            <img src="../Imagens/login 7dias.png" alt="">
+                            <img src="../Imagens/primeiro login.png" alt="">
+                            <img src="../Imagens/primeiro no rank mensal.png" alt="">
+                            <img src="../Imagens/primeiro no rank.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
