alinhando as tags de conquistas

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -36,13 +36,13 @@
                         <div class="conquistas-name">
                             <h3>Conquistas</h3>
                         </div>
-                        <div class="conquistas-icones"> 
-                            <img src="../Imagens/acertou todas.png" alt="">
-                            <img src="../Imagens/login 4dias.png" alt="">
-                            <img src="../Imagens/login 7dias.png" alt="">
-                            <img src="../Imagens/primeiro login.png" alt="">
-                            <img src="../Imagens/primeiro no rank mensal.png" alt="">
-                            <img src="../Imagens/primeiro no rank.png" alt="">
+                        <div class="conquistas-icones">
+                            <img src="../Imagens/acertou todas.png" alt="Acertou todas"><a>Acertou todas</a>
+                            <img src="../Imagens/login 4dias.png" alt="Login de 4 dias"><a>Login de 4 dias</a>
+                            <img src="../Imagens/login 7dias.png" alt="Login de 7 dias"><a>Login de 7 dias</a>
+                            <img src="../Imagens/primeiro login.png" alt="Primeiro login"><a>Primeiro login</a>
+                            <img src="../Imagens/primeiro no rank mensal.png" alt="Primeiro no rank mensal"><a>1º no rank mensal</a>
+                            <img src="../Imagens/primeiro no rank.png" alt="Primeiro no rank"><a>1º no rank</a>
                         </div>
                     </div>
                 </div>
