adicionado novas conquistas e o botao de logout

--- a/paginas/perfil.html
+++ b/paginas/perfil.html
@@ -17,13 +17,16 @@
 
             <div class="menu">
                 <div class="botoes">
-                    <button>Principal</button>
+                    <a href="#"><button>Principal</button></a>
                 </div>
                 <div class="botoes">
-                    <a href="../paginas/topicos.html"><button>Quiz</button></a>
+                    <a href="#"><button>Quiz</button></a>
                 </div>
                 <div class="botoes">
-                    <button>FAQ</button>
+                    <a href="#"><button>FAQ</button></a>
+                </div>
+                <div class="botao-sair">
+                    <a href="#"><button>Sair</button></a>
                 </div>
             </div>
             
