--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -42,6 +42,7 @@
 
             <!-- Perguntas -->
             <div class="perguntas">
+                <div id="questions">
                 <div class="box1">
                     <h2>Episódios Quiz</h2>
                     <h2>Tempo</h2>
