finzalização JS quiz

--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -73,6 +73,7 @@
                 </div>
             </div>
         </main>
+        <script src="../js/quiz.js"></script>
     </body>
     <footer>
         
