--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -62,14 +62,16 @@
                 </div>
                 <div class="box5">
                     <h2>Escolher Resposta</h2>>
-                    <p>Uma Selfie</p>
-                    <p>Um prêmio</p>
-                    <p>Uma camiseta</p>
-                    <p>Um autografo</p>
+                    <ul class="option_group">
+                        <li class="option">option 1</li>
+                        <li class="option">option 2</li>
+                        <li class="option">option 3</li>
+                        <li class="option">option 4</li>
+                    </ul>
                 </div>
                 <div class="box6">
                     <button>sair</button>
-                    <button>Próximo!</button>
+                    <button class="proximo" onclick="mext()"></button>
                 </div>
             </div>
         </main>
