Inicio Botões Quiz

--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name=""content="">
+        <meta name="Rick & Morty Quiz" content="Quiz e jogo do Ricke & Morty">
         <title>Projeto Coderhouse Rick e Morty</title>
         <link rel="stylesheet" href="../styles/perguntas-styles.CSS">
     </head>
@@ -62,16 +62,16 @@
                 </div>
                 <div class="box5">
                     <h2>Escolher Resposta</h2>>
-                    <ul class="option_group">
-                        <li class="option">option 1</li>
-                        <li class="option">option 2</li>
-                        <li class="option">option 3</li>
-                        <li class="option">option 4</li>
+                    <ul class="options_group">
+                        <li class="options">option 1</li>
+                        <li class="options">option 2</li>
+                        <li class="options">option 3</li>
+                        <li class="options">option 4</li>
                     </ul>
                 </div>
                 <div class="box6">
-                    <button>sair</button>
-                    <button class="proximo" onclick="mext()"></button>
+                    <button>Sair</button>
+                    <button>Próximo!</button>
                 </div>
             </div>
         </main>
