adição de vídeo para código CSS/HTML

--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -50,12 +50,11 @@
                 <div class="box2">
                     <p>Responda as perguntas abaixo</p>
                 </div>
-                <div 
-                    id="video"
-                    class="container-fluid"
-                    width="33%"
-                    height="33%"
-                ></div>
+                <div class="video">
+                    <video width="640" height="360" controls>
+                    <source src="../videos/SaveTube.App-Rick And Morty. .mp4">
+                    </video>                    
+                </div>
                 <div class="box4">
                     <h3>Pergunta 1/5</h3>
                     <h3>O que o Morty queria do Presidente?</h3>
@@ -63,19 +62,19 @@
                 <div class="box5">
                     <h2>Escolher Resposta</h2>>
                     <ul class="options_group">
-                        <li class="options">option 1</li>
-                        <li class="options">option 2</li>
-                        <li class="options">option 3</li>
-                        <li class="options">option 4</li>
+                        <li class="options"></li>
+                        <li class="options"></li>
+                        <li class="options"></li>
+                        <li class="options"></li>
                     </ul>
                 </div>
                 <div class="box6">
                     <button>Sair</button>
                     <button>Próximo!</button>
                 </div>
+                <script src="../js/quiz.js"></script>
             </div>
         </main>
-        <script src="../js/quiz.js"></script>
     </body>
     <footer>
         
