correção página de perguntas

--- a/paginas/perguntas.html
+++ b/paginas/perguntas.html
@@ -15,7 +15,7 @@
                 <button>reiniciar quiz</button>
             </div>
             <div class="perfil small">
-                <img src="../imagens/128x128 2.png" style="
+                <img src="../imagens/Perfil.png" style="
                     height: 77px;
                     width: 76px;
                     border-radius: 170px;
@@ -41,39 +41,37 @@
             </div>
 
             <!-- Perguntas -->
-            <div class="perguntas">
-                <div id="questions">
-                <div class="box1">
-                    <h2>Episódios Quiz</h2>
-                    <h2>Tempo</h2>
+            <div class="fundo">
+                <div id="perguntas">
+                    <div class="questions">
+                        <div class="box1">
+                            <h2>Episódios Quiz</h2>
+                            <h2>Tempo</h2>
+                            <p>Responda as perguntas após o vídeo abaixo</p>
+                            <video width="640" height="360" controls>
+                            <source src="../videos/SaveTube.App-Rick And Morty. .mp4" type="video/mp4">
+                            </video>                    
+                        </div>
+                        <div class="alternativas">
+                            <h3>Pergunta 1/5</h3>
+                            <h3>O que o Morty queria do Presidente?</h3>
+                            <h2>Escolher Resposta</h2>>
+                            <ul class="options_group">
+                                <li class="options"></li>
+                                <li class="options"></li>
+                                <li class="options"></li>
+                                <li class="options"></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="box2">
-                    <p>Responda as perguntas abaixo</p>
-                </div>
-                <div class="video">
-                    <video width="640" height="360" controls>
-                    <source src="../videos/SaveTube.App-Rick And Morty. .mp4">
-                    </video>                    
-                </div>
-                <div class="box4">
-                    <h3>Pergunta 1/5</h3>
-                    <h3>O que o Morty queria do Presidente?</h3>
-                </div>
-                <div class="box5">
-                    <h2>Escolher Resposta</h2>>
-                    <ul class="options_group">
-                        <li class="options"></li>
-                        <li class="options"></li>
-                        <li class="options"></li>
-                        <li class="options"></li>
-                    </ul>
-                </div>
-                <div class="box6">
+
+                <div class="Sair">
                     <button>Sair</button>
                     <button>Próximo!</button>
                 </div>
-                <script src="../js/quiz.js"></script>
             </div>
+            <script src="../js/quiz.js"></script>
         </main>
     </body>
     <footer>
