correção página index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Projeto Coderhouse Rick e Morty</title>
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
 
     <body>
@@ -12,7 +12,7 @@
         <!-- Header -->
         <header>
             <div class="logo">
-                <img src="../imagens/logo.png">
+                <img src="./imagens/logo.png">
             </div>
             <div class="login">
                 <button type="button">LOGIN</button>
@@ -25,22 +25,22 @@
             <!-- Destaques -->
             <div class="destaques">
                 <div class="personagens-img destaques-item">
-                    <img src="../imagens/personagens.png">
+                    <img src="./imagens/personagens.png">
                     <h4>Personagens</h4>
                 </div>
 
                 <div class="episodios-img destaques-item">
-                    <img src="../imagens/episodios.png">
+                    <img src="./imagens/episodios.png">
                     <h4>Episódios</h4>
                 </div>
 
                 <div class="citacoes-img destaques-item">
-                    <img src="../imagens/citacoes.png">
+                    <img src="./imagens/citacoes.png">
                     <h4>Citações</h4>
                 </div>
 
                 <div class="criaturas-img destaques-item">
-                    <img src="../imagens/criaturas.png">
+                    <img src="./imagens/criaturas.png">
                     <h4>criaturas</h4>
                 </div>
 
@@ -51,7 +51,7 @@
 
             <!-- Portal -->
             <div class="portal">
-                <img class="portal" src="../imagens/portal.gif">
+                <img class="portal" src="./imagens/portal.gif">
                 <button class="jogar">JOGAR</button>
             </div>
 
